# Uutistracker

./: README.md  app.py  pyproject.toml
src/: endpoints.py  uutistracker.py
src/abstractions/: apiresponse.py  feedhandler.py  resthandler.py  scraperhandler.py
src/exceptions/: expectedfaultyheadline.py
src/implementations/: hs.py  iltalehti.py  iltasanomat.py  stt.py  yle.py
tests/: test_api.py  test_rest.py  test_scraper.py  test_uutistracker.py
