[tool.poetry]
name = "uutistracker"
version = "1.0.5"
description = "A simple CLI application that provides real-time news updates from major Finnish news outlets."
authors = ["Kalle Sundell"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
requests = "^2.32.3"
pytest-mock = "^3.14.0"
colorama = "^0.4.6"
lxml = "^5.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
